force-app/main/default/objects/Inventory_Transfer_Order_Line__c/Inventory_Transfer_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Inventory Transfer Order Line</label>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Transfer Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>