force-app/main/default/objects/Inventory_Transfer_Order_Line__c/fields/Box_Count_Sent__c.field-meta.xml
<CustomField>
    <fullName>Box_Count_Sent__c</fullName>
    <formula>Quantity_Sent__c / Product__r.Case_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Box Count Sent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>