force-app/main/default/objects/Inventory_Transfer_Order_Line__c/fields/Inventory_Transfer_Order__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Transfer_Order__c</fullName>
    <label>Inventory Transfer Order</label>
    <referenceTo>Inventory_Transfer_Order__c</referenceTo>
    <relationshipLabel>Inventory Transfer Order Lines</relationshipLabel>
    <relationshipName>Inventory_Transfer_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>